发版前清理