@@ -14,8 +14,6 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <native.maven.plugin.version>0.10.1</native.maven.plugin.version>
-        <imageName>peerbanhelper-binary</imageName>
         <mainClass>com.ghostchu.peerbanhelper.Main</mainClass>
         <maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
     </properties>
@@ -199,208 +197,6 @@
                                 </configuration>
                             </execution>
                         </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>native-unix-like-muslc</id>
-            <properties>
-                <is-native-image>true</is-native-image>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.graalvm.buildtools</groupId>
-                        <artifactId>native-maven-plugin</artifactId>
-                        <version>${native.maven.plugin.version}</version>
-                        <extensions>true</extensions>
-                        <executions>
-                            <execution>
-                                <id>build-native</id>
-                                <goals>
-                                    <goal>compile-no-fork</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <skip>false</skip>
-                            <imageName>${imageName}</imageName>
-                            <fallback>false</fallback>
-                            <buildArgs>
-                                <buildArg>--static</buildArg>
-                                <buildArg>--libc=musl</buildArg>
-                                <buildArg>-J-Dfile.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dstdout.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dstderr.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dconsole.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Duser.language=en</buildArg>
-                                <buildArg>-J-Duser.region=US</buildArg>
-                                <buildArg>--verbose</buildArg>
-                                <buildArg>--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</buildArg>
-                                <!--                                <buildArg>-H:ReflectionConfigurationFiles=./src/main/resources/reflection-config.json</buildArg>-->
-                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
-                                <buildArgs>--features=com.ghostchu.peerbanhelper.graalvm.PBHSQLiteFeature</buildArgs>
-                                <buildArg>--allow-incomplete-classpath</buildArg>
-                                <buildArg>--enable-url-protocols=http,https</buildArg>
-                                <buildArg>--gc=serial</buildArg>
-                                <buildArg>-H:EnableURLProtocols=http</buildArg>
-                                <buildArg>-H:EnableURLProtocols=https</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>-march=compatibility</buildArg>
-                                <buildArg>-H:ConfigurationFileDirectories=./src/main/resources/META-INF/native-image
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOPLoggerFactory</buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOP_FallbackServiceProvider
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteServiceProvider
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteLoggerFactory
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=java.util.logging.ConsoleHandler</buildArg>
-                                <buildArg>--initialize-at-build-time=java.util.logging.FileHandler</buildArg>
-                                <buildArg>--initialize-at-build-time=org.sqlite.util.ProcessRunner</buildArg>
-                                <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl</buildArg>
-                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-                            </buildArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>native-unix-like</id>
-            <properties>
-                <is-native-image>true</is-native-image>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.graalvm.buildtools</groupId>
-                        <artifactId>native-maven-plugin</artifactId>
-                        <version>${native.maven.plugin.version}</version>
-                        <extensions>true</extensions>
-                        <executions>
-                            <execution>
-                                <id>build-native</id>
-                                <goals>
-                                    <goal>compile-no-fork</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <skip>false</skip>
-                            <imageName>${imageName}</imageName>
-                            <fallback>false</fallback>
-                            <buildArgs>
-                                <buildArg>-J-Dfile.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dstdout.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dstderr.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dconsole.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Duser.language=en</buildArg>
-                                <buildArg>-J-Duser.region=US</buildArg>
-                                <buildArg>--verbose</buildArg>
-                                <buildArg>--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</buildArg>
-                                <buildArgs>--features=com.ghostchu.peerbanhelper.graalvm.PBHSQLiteFeature</buildArgs>
-                                <!--                                <buildArg>-H:ReflectionConfigurationFiles=./src/main/resources/reflection-config.json</buildArg>-->
-                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
-                                <buildArg>--allow-incomplete-classpath</buildArg>
-                                <buildArg>--enable-url-protocols=http,https</buildArg>
-                                <buildArg>--gc=serial</buildArg>
-                                <buildArg>-H:EnableURLProtocols=http</buildArg>
-                                <buildArg>-H:EnableURLProtocols=https</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>-march=compatibility</buildArg>
-                                <buildArg>-H:ConfigurationFileDirectories=./src/main/resources/META-INF/native-image
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOPLoggerFactory</buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOP_FallbackServiceProvider
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteServiceProvider
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteLoggerFactory
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=java.util.logging.ConsoleHandler</buildArg>
-                                <buildArg>--initialize-at-build-time=java.util.logging.FileHandler</buildArg>
-                                <buildArg>--initialize-at-build-time=org.sqlite.util.ProcessRunner</buildArg>
-                                <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl</buildArg>
-                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-                            </buildArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>native-windows</id>
-            <properties>
-                <is-native-image>true</is-native-image>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.graalvm.buildtools</groupId>
-                        <artifactId>native-maven-plugin</artifactId>
-                        <version>${native.maven.plugin.version}</version>
-                        <extensions>true</extensions>
-                        <executions>
-                            <execution>
-                                <id>build-native</id>
-                                <goals>
-                                    <goal>compile-no-fork</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <skip>false</skip>
-                            <imageName>${imageName}</imageName>
-                            <fallback>false</fallback>
-                            <buildArgs>
-                                <buildArg>-H:NativeLinkerOption=/SUBSYSTEM:CONSOLE</buildArg>
-                                <buildArg>-J-Dfile.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dstdout.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dstderr.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Dconsole.encoding=UTF-8</buildArg>
-                                <buildArg>-J-Duser.language=en</buildArg>
-                                <buildArg>-J-Duser.region=US</buildArg>
-                                <buildArg>--verbose</buildArg>
-                                <buildArg>--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</buildArg>
-                                <!--                                <buildArg>-H:ReflectionConfigurationFiles=./src/main/resources/reflection-config.json</buildArg>-->
-                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
-                                <buildArg>--allow-incomplete-classpath</buildArg>
-                                <buildArg>--enable-url-protocols=http,https</buildArg>
-                                <buildArgs>--features=com.ghostchu.peerbanhelper.graalvm.PBHSQLiteFeature</buildArgs>
-                                <buildArg>-H:EnableURLProtocols=http</buildArg>
-                                <buildArg>-H:EnableURLProtocols=https</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>--gc=serial</buildArg>
-                                <buildArg>-march=compatibility</buildArg>
-                                <buildArg>-H:ConfigurationFileDirectories=./src/main/resources/META-INF/native-image
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOPLoggerFactory</buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOP_FallbackServiceProvider
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteServiceProvider
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteLoggerFactory
-                                </buildArg>
-                                <buildArg>--initialize-at-build-time=java.util.logging.ConsoleHandler</buildArg>
-                                <buildArg>--initialize-at-build-time=java.util.logging.FileHandler</buildArg>
-                                <buildArg>--initialize-at-build-time=org.sqlite.util.ProcessRunner</buildArg>
-                                <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl</buildArg>
-                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-                            </buildArgs>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
